markos/_SoftwareContainer/css/_SoftwareContainer.css
.markos-softwarecontainer {
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    height: calc(100vh - 50px);
    display: flex;
    flex-direction: column;
    background-color: whitesmoke;
    border: 1px solid #3333CC;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
}

.markos-softwarecontainer img {
    max-width: 40%;
}

.markos-softwarecontainer .markos-softwarecontainer-header {
    width: 100%;
    height: 40px;
    background-color: whitesmoke;
    border-bottom: 1px solid #a1a1a1;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
}

.markos-softwarecontainer .markos-softwarecontainer-header .close-button {
    width: 40px;
    height: 100%;
    float: right;
    background-color: whitesmoke;
    border-left: 1px solid #a1a1a1;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.markos-softwarecontainer .markos-softwarecontainer-body {
    width: 100%;
    height: calc(100% - 40px);
    background-color: whitesmoke;
}

.markos-softwarecontainer .markos-softwarecontainer-resize {
    height: 15px;
    width: 15px;
    position: absolute;
    bottom: -15px;
    right: -15px;
}

@media (min-width: 550px ) {

}

@media ( min-width: 900px ) {

}

@media ( min-width: 1280px ) {
    .markos-softwarecontainer {
        position: absolute;
        top: calc(100% / 4);
        left: calc(100% / 4);
        width: calc(100% / 2);
        height: calc(100% / 2);
    }

    .markos-softwarecontainer-header {
        height: 25px;
    }

    .markos-softwarecontainer-header .close-button {
        width: 25px;
    }

    .markos-softwarecontainer-body {
        height: calc(100% - 25px);
    }
}

@media ( min-width: 1700px ) {

}

